--- a/_defaults/system_settings/romanesco.env-path.yaml
+++ b/_defaults/system_settings/romanesco.env-path.yaml
@@ -1,3 +1,4 @@
 key: romanesco.env_path
 namespace: romanesco
 area: Environment
+value: /home/hugo/.composer/vendor/bin:/home/hugo/.nvm/versions/node/v20.11.1/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin
