Extract live edits

--- a/_data/chunks/footerAdditional.yaml
+++ b/_data/chunks/footerAdditional.yaml
@@ -11,5 +11,10 @@ static_file: chunks/footerAdditional.tpl
 
 [[[[cbHasFields?
     &field=`100001`
-    &then=`loadAssets? &component=`map``
+    &then=`[[loadScrollable]]`
+]]]]
+
+[[[[cbHasFields?
+    &field=`100001`
+    &then=`loadAssets? &component=`map`` 
 ]]]]
